# llmops-databricks-course-diisnc

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  arxiv_agent.py  arxiv_curator-0.1.0-py3-none-any.whl  databricks.yml  eval_inputs.txt  project_config.yml  pyproject.toml  valuation_agent.py
.claude/commands/: run-notebook.md
.github/: CODEOWNERS
.github/workflows/: README.md  cd.yml  ci.yml
lecture_1/: 1.1_foundation_models_overview.py  1.2_provisioned_throughput_deployment.py  1.4_external_models_custom_provider.py
notebooks/: 1.1_foundation_models_overview.py  1.2_provisioned_throughput_deployment.py  1.3_arxiv_data_ingestion.py  1.3_valuation_data_ingestion.py  1.4_external_models_custom_provider.py  2.1_context_engineering_theory.py  2.2_pdf_parsing_ai_parse.py  2.3_chunking_strategies.py  2.4_embeddings_vector_search.py  3.1_custom_functions_tools.py  3.1b_simple_rag.py  3.2_mcp_integration.py  3.2a_test_my_agent.py  3.2b_genie.py  3.3_session_memory_lakebase.py  3.4.spn_authentication.py  3.5.spn_authentication_in_action.py  3.6.uc_function_example.py  4.1.tracing_implementation.py  4.2.custom_agent.py  4.2.custom_agent_explanation  4.3.evaluation_theory.py  4.4.evaluation_practice.py  4.4.mlflow_log_register.py  5.1_endpoint_deployment.py  5.2_spn_permissions.py  6.1.propagate_traces.py
resources/: data_ingestion_job.yml  hello_world_job.yml  process_data.yml  register_deploy_agent.yml  update_traces_aggregated.yml  valuation_data_ingestion_job.yml
resources/dashboard/: agent_monitoring_dashboard.lvdash.json  agent_monitoring_dashboard.yml
resources/deployment_scripts/: deploy_agent.py  log_register_agent.py  process_data.py  update_traces_aggregated.py
src/arxiv_curator/: agent.py  config.py  data_processor.py  evaluation.py  mcp.py  memory.py  serving.py  vector_search.py
src/valuation_curator/: __init__.py  agent.py  config.py  data_processor.py  evaluation.py  mcp.py  memory.py  vector_search.py
src/your_custom_package/: __init__.py
tests/: __init__.py  test_basic.py
